fix: gate preview on authoritative issue.json mode, not result.zip presence
The result.zip presence check was bypassable: result.zip lives in the same
writable task dir as the private clone, so a stale/forged zip on an existing-repo
task could re-open the preview hole. Read the mode from the authoritative
issue.json (written once at submit) instead. Regression test: an existing-repo
task with a stale result.zip still returns 404 for preview.

Found by the Codex stop-time review gate.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>